<resources>
    <string name="app_name">장방경로당</string>
    <string name="action_settings">Settings</string>
    <string name="device_list">Device list</string>
    <string name="share_list">Share list</string>
    <string name="reNickName">닉네임입력</string>
    <string name="reTopic">토픽변경</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="ec_start">Start EZConfig</string>
    <string name="ec_cancel">Cancel EZConfig</string>
    <string name="remove_device">Remove Device</string>
    <string name="ap_start">Start APConfig</string>
    <string name="offline">Off-line</string>
    <string name="IntranetControl">Online-Intranet</string>
    <string name="OnlineControl">Online</string>
    <string name="Confirm">확인</string>
    <string name="at_login_sns">Sign in with social media account</string>
    <string name="binding">Binding&#046;&#046;</string>
    <string name="cancel_tip">OK</string>
    <string name="click_bind_phone">Tap bind phone number</string>
    <string name="click_set_neekname">프로필 수정</string>
    <string name="contact_use_tip">You sign in with %s account</string>
    <string name="env_preview">(Preview)</string>
    <string name="env_wrong_tip">장치는 온라인 상태이고 앱은 미리보기 환경에서 실행됩니다.</string>
    <string name="ty_loading">로딩중…</string>
    <string name="every_week_five">매주 금요일 Friday</string>
    <string name="every_week_four">매주 목요일</string>
    <string name="every_week_one">매주 월요일</string>
    <string name="every_week_seven">매주 일요일</string>
    <string name="every_week_six">매주 토요일</string>
    <string name="every_week_three">매주 수요일</string>
    <string name="every_week_two">매주 화요일</string>
    <string name="experience_center">체험 센터</string>
    <string name="experience_center_enter">Enter experience center</string>
    <string name="firmware_device_updating">Updating: device control module</string>
    <string name="firmware_gw_updating">Updating:connection module</string>
    <string name="firmware_has_upgrade_title">New device firmware</string>
    <string name="firmware_no_update_one">Version:</string>
    <string name="firmware_no_update_title">Firmware is the latest version</string>
    <string name="firmware_upgrade_dev">Device control module</string>
    <string name="firmware_upgrade_failure_description">Please restart the device and try again
    </string>
    <string name="firmware_upgrade_gw">Connectioxn module:</string>
    <string name="firmware_upgrade_now">Upgrade now</string>
    <string name="gesture_password_forget">Forgot pattern password</string>
    <string name="gesture_password_input_limit">Trying too often, please retry after %d minutes
    </string>
    <string name="gesture_password_input_new">New pattern password</string>
    <string name="gesture_password_input_original">Enter correct pattern password</string>
    <string name="gesture_password_reset">Whether to reset pattern password?</string>
    <string name="gesture_password_set_successful">Successfully set your pattern</string>
    <string name="home_no_device">Empty List</string>
    <string name="input_login_password">Enter login password</string>
    <string name="input_password_again">Enter password again</string>
    <string name="key_num_not_reasonable">Password length is 6-13 characters, please try again
    </string>
    <string name="key_num_not_uniform">Password not the same, please try again</string>
    <string name="local_space_no_enough">Local space not enough</string>
    <string name="login_find_password">Request password</string>
    <string name="login_forget">비밀번호를 잊어버렸습니다.</string>
    <string name="login_forget_photo">Enter registered number</string>
    <string name="login_password">Login password</string>
    <string name="login_register">회원가입</string>
    <string name="login_space">|</string>
    <string name="login_tip">Smart life. Smart living</string>
    <string name="my_smart_home_prepare">Devices(Prepare)</string>
    <string name="never_bind">Unbound</string>
    <string name="no_timer_list_tip">Auto mode is on, please add a timer</string>
    <string name="package_mode_demo">DEMO</string>
    <string name="please_input_wifi_password">Please input password</string>
    <string name="refind_password">Found login password</string>
    <string name="single_week_five">Fri</string>
    <string name="single_week_four">Thu</string>
    <string name="single_week_one">Mon</string>
    <string name="single_week_seven">Sun</string>
    <string name="single_week_six">Sat</string>
    <string name="single_week_three">Wed</string>
    <string name="single_week_two">Tue</string>
    <string name="taste_device_support">It\'s for demo purposes only</string>
    <string name="timer_task">Task</string>
    <string name="timer_time">Time</string>
    <string name="ty_add_device_find_dev">장치 찾기</string>
    <string name="ty_add_device_initialize">장치 초기화</string>
    <string name="ty_add_device_reg_cloud">클라우드에 장치 등록</string>
    <string name="ty_app_upgrade_tips">앱 버전이 기기를 지원하지 않습니다. 최신 버전으로 업데이트하세요.</string>
    <string name="ty_bind_phone_num">Bind phone number first</string>
    <string name="ty_bind_phone_num_now">Bind it now</string>
    <string name="ty_camera_framework_bug">Can\'t open camera</string>
    <string name="ty_cant_control_info">Operation is not available, please try later</string>
    <string name="ty_change_gesture">패턴 비밀번호 변경</string>
    <string name="ty_change_keyword">비밀번호 변경</string>
    <string name="ty_change_login_keyword">로그인 비밀번호 변경</string>
    <string name="ty_config_device_init_tip">Initializing the device&#046;&#046;&#046;</string>
    <string name="ty_connect_net_modules">Connection module</string>
    <string name="ty_control_panel_factory_reset">기본값 복원</string>
    <string name="ty_control_panel_factory_reset_fail">Restoring failed, please retry</string>
    <string name="ty_control_panel_factory_reset_info">Device as well as related data will be
        removed after restoring manufacture defaults
    </string>
    <string name="ty_control_panel_factory_reset_succ">Success</string>
    <string name="ty_control_panel_factory_reseting">Restoring, please don\'t turn it off&#046;&#046;&#046;.</string>
    <string name="ty_creat_gesture">Enter pattern password</string>
    <string name="ty_creat_gesture_again">Enter pattern password again</string>
    <string name="ty_creat_gesture_key">Create pattern password</string>
    <string name="ty_creat_gesture_key_info">Create a pattern password. Other persons can\'t control
        your deviceList even with your smartphone
    </string>
    <string name="ty_creat_gesture_succ">패턴 비밀번호를 성공적으로 생성했습니다.</string>
    <string name="ty_current_bind_phone_tip">해당 이메일로 인증코드 발송:</string>
    <string name="ty_development_tool_pid_fail">제품 ID를 전송하지 못했습니다, 다시시도해주세요.</string>
    <string name="ty_development_tool_pid_succ">제품 ID를 성공적으로 전송했습니다.</string>
    <string name="ty_device_control_modules">장치 제어 모듈</string>
    <string name="ty_enter_old_gesture">이전 패턴 비밀번호를 입력하십시오</string>
    <string name="ty_ez_ap">여전히 작동하지 않습니다. 다른 방법을 시도해보십시오.</string>
    <string name="ty_ez_toast_different_wifi">전화와 장치가 동일한 Wi-Fi에 연결되어 있는지 확인해주세요.</string>
    <string name="ty_ez_try">Please try again</string>
    <string name="ty_gesture_not_correct">Incorrect password, please re-enter</string>
    <string name="ty_gesture_not_correct_times">Error, please reset pattern password</string>
    <string name="ty_gesture_not_matching">Pattern password error, please re-enter</string>
    <string name="ty_gesture_not_set">아직 설정되지 않음</string>
    <string name="ty_input_new_keyword">새 비밀번호를 입력하세요</string>
    <string name="ty_input_old_keyword">이전 비밀번호 입력하세요</string>
    <string name="ty_keep_net_working">전원을 끄지 마시고 네트워크를 유지하십시오.</string>
    <string name="ty_keep_power_working">연결중...</string>
    <string name="ty_login_fb">facebook</string>
    <string name="ty_login_forget_keyword_find">Find password</string>
    <string name="ty_login_ins">instagram</string>
    <string name="ty_login_qq">QQ</string>
    <string name="ty_login_tw">twitter</string>
    <string name="ty_login_wechat">WeChat</string>
    <string name="ty_login_weibo">weibo</string>
    <string name="ty_mobile_binding_tip">Login with mobile number after verification</string>
    <string name="ty_mobile_change_button">Change mobile number</string>
    <string name="ty_mobile_change_phone">Your mobile number</string>
    <string name="ty_mobile_change_tip">Login with mobile number</string>
    <string name="ty_modify_device_name_length_limit">No more than 25 characters for device name
    </string>
    <string name="ty_modify_group_name_length_limit">No more than 25 characters for group name
    </string>
    <string name="ty_mqtt_connecting">Device is connecting&#046;&#046;&#046;.</string>
    <string name="ty_net_useless_info">Network is unavailable</string>
    <string name="ty_no_net_info">Network error, please check</string>
    <string name="ty_not_bind_phone_num">Not bind phone number yet\n Can\'t change password</string>
    <string name="ty_offline_delete_share">Delete sharing</string>
    <string name="ty_offline_subtitle">Please check or retry</string>
    <string name="ty_offline_title">The device is offline</string>
    <string name="ty_pattern_auto_des">Turn on to add new timer</string>
    <string name="ty_pattern_manual">Manual</string>
    <string name="ty_permission_tip_contact">Failed to obtain contact information, please grant the
        permission in phone \"Settings-Applications-%1$s-Permissions\"
    </string>
    <string name="ty_permission_tip_location">- Get permission to location information</string>
    <string name="ty_permission_tip_phone_state">- Get permission to read phone status</string>
    <string name="ty_permission_tip_read_set">To normally use %1$s, please grant permission to
        \"read or write system settings\"
    </string>
    <string name="ty_permission_tip_tail">Please grant permissions above in phone
        \"Settings\"-\"Applications\"-%1$s-\"Permission\"
    </string>
    <string name="ty_permission_tip_title">To normally use %1s, please grant permissions below:
    </string>
    <string name="ty_permission_tip_write_storage">- Get permission to operate storage</string>
    <string name="ty_phone_num_error">이메일을 확인해주세요.</string>
    <string name="ty_profile_gesture">Pattern unlock</string>
    <string name="ty_profile_scan">Scan</string>
    <string name="ty_send_veri_code">Verification code is sent to number %s</string>
    <string name="ty_share_edit_account">User</string>
    <string name="ty_time_correct">Time setting error, please correct and try again</string>
    <string name="ty_timer_delete_confirm">Sure to delete the timer setting?</string>
    <string name="ty_timer_params_open_time_empty">Start time can\'t be empty</string>
    <string name="ty_timer_repeat">Repeat</string>
    <string name="ty_timer_switch">ON/OFF</string>
    <string name="ty_timer_switch_off">Off</string>
    <string name="go_next">다음</string>
    <string name="input_password">비밀번호</string>
    <string name="login_choose_country">국가 / 범위</string>
    <string name="logout">로그아웃</string>
    <string name="topic">Topic</string>
    <string name="ty_add_share_nickname">닉네임</string>
    <string name="ty_ez_init_comfirm">재설정 확인, 핫스팟 모드로 전환</string>
    <string name="ty_ez_init_descripton1">
        네트워크가 불안정합니다.\n
        장치 핫스팟에 연결하고 다시 시도하십시오.\n
        연결하기 전에 먼저 장치를 재설정하십시오.</string>
    <string name="ty_ez_init_descripton2">스마트 램프 : 켜질 때까지 "켜기 및 꺼짐" 3번 천천히 깜박임
    </string>
    <string name="ty_ez_init_descripton3">기타 장치 목록 : 재설정 버튼을 5 초 동안 길게 누릅니다. 표시등이 천천히 깜박임 (자세한 내용은 설명서 참조)
    </string>
    <string name="ty_ez_init_help">자세한 내용은 도움말을 참조하십시오.</string>
    <string name="login">로그인</string>
    <string name="phone_email">이메일 입력</string>
    <string name="ty_login_forget_keyword">비밀번호를 잊어버렸습니다.</string>
    <string name="ty_login_sms_confirm">문자 확인으로 로그인</string>
</resources>