<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/app_bg_color">

    <include
        android:id="@+id/action_bar_layout"
        layout="@layout/toolbar_top_view"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/action_bar_layout"
        android:layout_margin="32dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_network_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mg_16"
            android:gravity="center"
            android:text="@string/ty_ez_init_descripton1"
            android:textColor="@color/colorNormal"
            android:textSize="@dimen/ts_14"
            android:textStyle="bold"
            tools:context=".MainActivity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:width="100dp"-->
                <!--android:gravity="end"-->
                <!--android:text="@string/add_device_failed_label1"-->
                <!--android:textColor="@color/colorNormal"-->
                <!--android:textSize="@dimen/ts_14"/>-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="350dp"
                android:gravity="start"
                android:textStyle="bold"
                android:text="@string/ty_ez_init_descripton2"
                android:textColor="@color/edit_exit_title"
                android:textSize="@dimen/ts_14"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:width="100dp"-->
                <!--android:gravity="end"-->
                <!--android:text="@string/add_device_failed_label2"-->
                <!--android:textColor="@color/colorNormal"-->
                <!--android:textSize="@dimen/ts_14"/>-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="350dp"
                android:gravity="start"
                android:text="@string/ty_ez_init_descripton3"
                android:textColor="@color/edit_exit_title"
                android:textStyle="bold"
                android:textSize="@dimen/ts_14"/>


        </LinearLayout>

        <TextView
            android:id="@+id/add_device_tip_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/ty_ez_init_help"
            android:textStyle="bold"
            android:textColor="@color/switch_on_color"
            android:textSize="@dimen/ts_15"/>

    </LinearLayout>


    <Button
        android:id="@+id/tv_bottom_button"
        android:background="@drawable/asset_btn03_p"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/mg_16"
        android:layout_marginLeft="@dimen/mg_15"
        android:textStyle="bold"
        android:layout_marginRight="@dimen/mg_15"
        android:text="@string/ty_ez_init_comfirm"
        android:textSize="@dimen/ts_15"/>

</RelativeLayout>