<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/app_bg_color"
    android:orientation="vertical">

    <Button
        android:id="@+id/login_submit"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/rl_password"
        android:layout_marginLeft="@dimen/phone_button_margin_left"
        android:layout_marginTop="16dp"
        android:layout_marginRight="@dimen/phone_button_margin_right"
        android:background="@drawable/radius"
        android:fontFamily="@font/app_main_font"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/action_login_reg_onclick"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/rl_password"
        android:layout_marginLeft="@dimen/phone_button_margin_left"
        android:layout_marginTop="85dp"
        android:layout_marginRight="@dimen/phone_button_margin_right"
        android:background="@drawable/radius"
        android:fontFamily="@font/app_main_font"
        android:gravity="center"
        android:text="회원가입"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/rl_country"
        android:layout_marginLeft="@dimen/phone_button_margin_right"
        android:layout_marginTop="120dp"
        android:layout_marginRight="@dimen/phone_button_margin_left"
        android:background="@drawable/asset_inputbox_bg"
        android:fontFamily="@font/app_main_font"
        android:hint="@string/phone_email"
        android:imeOptions="actionDone"
        android:paddingLeft="@dimen/phone_button_padding_left"
        android:singleLine="true"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_hint_color"
        android:textCursorDrawable="@null"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/rl_country"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mg_50"
        android:layout_below="@id/action_bar_layout"
        android:layout_marginLeft="@dimen/mg_15"
        android:layout_marginTop="@dimen/mg_20"
        android:layout_marginRight="@dimen/mg_15"
        android:layout_marginBottom="@dimen/mg_10"
        android:background="@drawable/bg_white_round"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/country_name_hint"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:padding="@dimen/mg_15"
            android:text="@string/login_choose_country"
            android:textColor="@color/text_color"
            android:textSize="@dimen/ts_15" />

        <TextView
            android:id="@+id/country_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableRight="@drawable/arrow_more"
            android:drawablePadding="@dimen/mg_10"
            android:ellipsize="marquee"
            android:gravity="center_vertical|right"
            android:paddingRight="@dimen/mg_15"
            android:singleLine="true"
            android:textColor="@color/text_color"
            android:textSize="@dimen/ts_15" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/user_name"
        android:layout_marginLeft="@dimen/mg_15"
        android:layout_marginTop="@dimen/mg_10"
        android:layout_marginRight="@dimen/mg_15"
        android:background="@drawable/asset_inputbox_bg">

        <EditText
            android:id="@+id/password"
            style="@style/edit_text_input"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/mg_16"
            android:layout_toLeftOf="@+id/password_switch"
            android:fontFamily="@font/app_main_font"
            android:hint="@string/input_password"
            android:imeOptions="actionDone"
            android:textColor="@color/text_color"
            android:textColorHint="@color/text_hint_color"
            android:textSize="20dp" />

        <ImageButton
            android:id="@+id/password_switch"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/mg_5"
            android:background="@color/white"
            android:paddingLeft="@dimen/mg_5"
            android:paddingRight="@dimen/mg_5"
            android:scaleType="centerInside"
            android:src="@drawable/ty_password_on" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/mg_30"
        android:layout_below="@id/login_submit"
        android:layout_marginLeft="@dimen/mg_18"
        android:layout_marginTop="@dimen/mg_75"
        android:layout_marginRight="@dimen/mg_18">

        <TextView
            android:id="@+id/option_validate_code"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:text="@string/ty_login_sms_confirm"
            android:textColor="@color/text_gray2orange"
            android:textSize="@dimen/ts_14"
            android:visibility="gone" />

        <TextView
            android:id="@+id/option_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/mg_10"
            android:fontFamily="@font/app_main_font"
            android:text="@string/ty_login_forget_keyword"
            android:textColor="@color/text_gray2orange"
            android:textSize="@dimen/ts_15"
            android:textStyle="bold" />

    </RelativeLayout>

    <include
        android:id="@+id/action_bar_layout"
        layout="@layout/toolbar_top_view" />


</RelativeLayout>