<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/app_bg_color"
    android:orientation="vertical">

    <Button
        android:id="@+id/bt_next"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="@dimen/phone_button_margin_left"
        android:layout_marginTop="250dp"
        android:layout_marginRight="@dimen/phone_button_margin_right"
        android:background="@drawable/radius"
        android:fontFamily="@font/app_main_font"
        android:gravity="center"
        android:text="@string/go_next"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_account"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/rl_country"
        android:layout_marginLeft="@dimen/phone_button_margin_right"
        android:layout_marginTop="120dp"
        android:layout_marginRight="@dimen/phone_button_margin_left"
        android:background="@drawable/asset_inputbox_bg"
        android:fontFamily="@font/app_main_font"
        android:hint="@string/phone_email"
        android:imeOptions="actionDone"
        android:paddingLeft="@dimen/phone_button_padding_left"
        android:singleLine="true"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_hint_color"
        android:textCursorDrawable="@null"
        android:textSize="20dp" />

    <LinearLayout
        android:id="@+id/rl_country"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mg_50"
        android:layout_below="@id/action_bar_layout"
        android:layout_marginLeft="@dimen/mg_15"
        android:layout_marginTop="@dimen/mg_20"
        android:layout_marginRight="@dimen/mg_15"
        android:layout_marginBottom="@dimen/mg_10"
        android:background="@drawable/bg_white_round"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/country_name_hint"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:padding="@dimen/mg_15"
            android:text="@string/login_choose_country"
            android:textColor="@color/text_color"
            android:textSize="@dimen/ts_15" />

        <TextView
            android:id="@+id/country_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableRight="@drawable/arrow_more"
            android:drawablePadding="@dimen/mg_10"
            android:ellipsize="marquee"
            android:gravity="center_vertical|right"
            android:paddingRight="@dimen/mg_15"
            android:singleLine="true"
            android:textColor="@color/text_color"
            android:textSize="@dimen/ts_15" />

    </LinearLayout>

    <include
        android:id="@+id/action_bar_layout"
        layout="@layout/toolbar_top_view" />

</RelativeLayout>
