<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/app_bg_color"
    android:orientation="vertical">
    <include
        android:id="@+id/action_bar_layout"
        layout="@layout/toolbar_top_view" />



    <RelativeLayout
        android:id="@+id/rl_renickname"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/mg_16"
            android:layout_marginLeft="@dimen/mg_16"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_renickname_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/ty_add_share_nickname"
                android:textColor="?attr/list_primary_color"
                android:textSize="@dimen/ts_16" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_renickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:drawableRight="@drawable/arrow_more"
            android:drawablePadding="6dp"
            android:textColor="?attr/list_sub_color"
            android:textSize="14sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_login_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="@dimen/mg_15"
        android:textColor="?attr/list_primary_color"
        android:textSize="@dimen/ts_16" />
    <RelativeLayout
        android:id="@+id/rl_topic"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/mg_16"
            android:layout_marginLeft="@dimen/mg_16"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_topic_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/topic"
                android:textColor="?attr/list_primary_color"
                android:textSize="@dimen/ts_16" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_topic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:drawablePadding="6dp"
            android:textColor="?attr/list_sub_color"
            android:textSize="14sp" />

    </RelativeLayout>

    <View
        android:id="@+id/menu_list_divider_mid"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="16dp"
        android:background="?attr/list_line_color" />

    <View
        android:id="@+id/menu_list_divider_end"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="?attr/list_line_color" />


    <View
        android:id="@+id/menu_list_divider_start"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="@dimen/mg_30"
        android:background="?attr/list_line_color" />

    <Button
        android:id="@+id/btn_passwordchange"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ty_cell_height"
        android:layout_marginTop="@dimen/mg_20"
        android:background="@drawable/bg_button_selector"
        android:gravity="center"
        android:text="@string/ty_change_keyword"
        android:textAllCaps="false"
        android:textColor="?attr/navbar_font_color"
        android:textSize="@dimen/ts_16"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ty_cell_height"
        android:layout_marginTop="@dimen/mg_20"
        android:background="@drawable/bg_button_selector"
        android:gravity="center"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="?attr/navbar_font_color"
        android:textSize="@dimen/ts_16"
        android:textStyle="bold" />


</LinearLayout>